2008-07-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* conf/Makefile.am:
	* conf/examples/ipbouncer.xml (added):
	* conf/examples/bouncer.xml (added):
	  Add two examples that use bouncers for stream authentication.
	  The first uses a htpasswdcrypt-bouncer, the second an ip bouncer.

2008-07-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/registry.py:
	  Complain when the type of a property is not in the list of
	  accepted types.
	* flumotion/component/bouncers/ipbouncer.xml:
	* flumotion/component/producers/playlist/playlist.xml:
	  Fix the two registry files that wrongly used boolean instead of
	  bool.

2008-07-30  Johan Dahlin  <johan@fluendo.com>

	* data/make-dummy-cert: Return 1 if we failed to generate
	the pem file, which probably means that the openssl binary
	is not installed.
	* flumotion/service/service.py (Servicer.createManager):
	Send in the full path to the generated .pem file if we could
	generate it successfully.
	Fixes #1020

2008-07-30  Johan Dahlin  <johan@fluendo.com>

	Update the fluendo logs to use the 'new' flumotion logo.
	Logos contributed by Eduardo Aquino.
	Fixes #1057

2008-07-29  Sebastien Merle  <sebastien@fluendo.com>

	* flumotion/common/process.py:
	Changed back the _daemonize function to daemonize,
	because it's used by external projects (ft).

2008-07-29  Johan Dahlin  <johan@flumotion.com>

	* flumotion/wizard/consumptionsteps.py:
	Only show shoutcast2 streams for ogg and mp3 content.
	Fixes #1059

2008-07-28  Johan Dahlin  <johan@flumotion.com>

	* flumotion/admin/gtk/adminwindow.py:
	Do not run the configuration wizard if there are lost components.
	Fixes #1066

2008-07-28  Johan Dahlin  <johan@flumotion.com>

	* flumotion/admin/gtk/adminwindow.py:
	Do not make it possible to run methods accessing the admin model
	before the wizard has connected to a server.
	Fixes #1075

2008-07-28  Johan Dahlin  <johan@flumotion.com>

	* flumotion/test/test_wizard.py: